--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -4,7 +4,7 @@
     </div>
     <ul class="nav-links">
         <li><a href="/">Trang Chủ</a></li>
-        <li><a href="#">Sản Phẩm</a></li>
+        <li><a href="/products">Sản Phẩm</a></li>
         <li><a href="#">Khuyến Mãi</a></li>
         <li><a href="#">Giới Thiệu</a></li>
         <li><a href="#">Liên Hệ</a></li>
